third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:30:14
   │
30 │     foreach(&v, |e| product = LambdaTest1::inline_mul(product, *e));
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:34:29
   │
34 │     LambdaTest1::inline_apply1(|z|z, g(LambdaTest1::inline_mul(c, LambdaTest1::inline_apply(|x|x, 3)))) + 2
   │                                ^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:34:90
   │
34 │     LambdaTest1::inline_apply1(|z|z, g(LambdaTest1::inline_mul(c, LambdaTest1::inline_apply(|x|x, 3)))) + 2
   │                                                                                             ^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:40:29
   │
40 │         LambdaTest1::inline_apply(|y|y, x)
   │                                   ^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:39:59
   │
39 │           LambdaTest1::inline_mul(c, LambdaTest1::inline_apply(|x| {
   │ ╭──────────────────────────────────────────────────────────────^
40 │ │         LambdaTest1::inline_apply(|y|y, x)
41 │ │         },
   │ ╰─────────^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:54:29
   │
54 │     LambdaTest2::inline_apply2(|x| x + 1, 3) +
   │                                ^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:55:29
   │
55 │     LambdaTest2::inline_apply2(|x| x * x, inline_apply(|y|y, 3))
   │                                ^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda.move:55:53
   │
55 │     LambdaTest2::inline_apply2(|x| x * x, inline_apply(|y|y, 3))
   │                                                        ^^^^
